<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_marginLeft="@dimen/dimen_90dp"
       android:layout_marginRight="@dimen/dimen_90dp"
       android:orientation="vertical"
       android:background="@drawable/shape_juxing"
       android:layout_width="match_parent"
       android:layout_height="400dp"
       android:layout_centerVertical="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_135dp">
        <TextView
            android:text="@string/share_title"
            android:textSize="@dimen/txtsize_42sp"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/delete"
            android:padding="@dimen/dimen_30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
     </RelativeLayout>
      <TextView
          android:background="@color/hui1"
          android:layout_width="match_parent"
          android:layout_height="1dp" />

      <!--微信-->
       <com.balysv.materialripple.MaterialRippleLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_135dp"
           app:mrl_rippleColor="@color/black"
           app:mrl_rippleHover="true"
           app:mrl_rippleOverlay="true"
           materialdesign:rippleBorderRadius="50">
      <LinearLayout
          android:id="@+id/wechat"
          android:paddingLeft="@dimen/dimen_30dp"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
         <ImageView
             android:src="@mipmap/wei"
             android:layout_width="@dimen/dimen_90dp"
             android:layout_height="@dimen/dimen_90dp" />
         <TextView
             android:layout_marginLeft="@dimen/dimen_30dp"
             android:text="@string/share_wei"
             android:textSize="@dimen/txtsize_36sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
      </LinearLayout>
       </com.balysv.materialripple.MaterialRippleLayout>


      <!--微信朋友圈-->
      <TextView
          android:background="@color/hui2"
          android:layout_width="match_parent"
          android:layout_height="1dp" />
       <com.balysv.materialripple.MaterialRippleLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_135dp"
           app:mrl_rippleColor="@color/black"
           app:mrl_rippleHover="true"
           app:mrl_rippleOverlay="true"
           materialdesign:rippleBorderRadius="50">
      <LinearLayout
          android:id="@+id/wemoments"
          android:paddingLeft="@dimen/dimen_30dp"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
         <ImageView
             android:src="@mipmap/weimoments"
             android:layout_width="@dimen/dimen_90dp"
             android:layout_height="@dimen/dimen_90dp" />
         <TextView
             android:layout_marginLeft="@dimen/dimen_30dp"
             android:text="@string/share_weimoments"
             android:textSize="@dimen/txtsize_36sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
      </LinearLayout>
       </com.balysv.materialripple.MaterialRippleLayout>
      <TextView
          android:background="@color/hui2"
          android:layout_width="match_parent"
          android:layout_height="1dp" />




      <!--qq-->
      <TextView
          android:background="@color/hui2"
          android:layout_width="match_parent"
          android:layout_height="1dp" />
       <com.balysv.materialripple.MaterialRippleLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_135dp"
           app:mrl_rippleColor="@color/black"
           app:mrl_rippleHover="true"
           app:mrl_rippleOverlay="true"
           materialdesign:rippleBorderRadius="50">
      <LinearLayout
          android:id="@+id/qq"
          android:paddingLeft="@dimen/dimen_30dp"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
         <ImageView
             android:src="@mipmap/qq"
             android:layout_width="@dimen/dimen_90dp"
             android:layout_height="@dimen/dimen_90dp" />
         <TextView
             android:layout_marginLeft="@dimen/dimen_30dp"
             android:text="@string/share_qq"
             android:textSize="@dimen/txtsize_36sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
      </LinearLayout>
       </com.balysv.materialripple.MaterialRippleLayout>
      <TextView
          android:background="@color/hui2"
          android:layout_width="match_parent"
          android:layout_height="1dp" />


      <!--qq空间-->
      <TextView
          android:background="@color/hui2"
          android:layout_width="match_parent"
          android:layout_height="1dp" />

       <com.balysv.materialripple.MaterialRippleLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_135dp"
           app:mrl_rippleColor="@color/black"
           app:mrl_rippleHover="true"
           app:mrl_rippleOverlay="true"
           materialdesign:rippleBorderRadius="50">
       <LinearLayout
           android:id="@+id/qzone"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center_vertical"
           android:orientation="horizontal"
           android:paddingLeft="@dimen/dimen_30dp">

           <ImageView
               android:layout_width="@dimen/dimen_90dp"
               android:layout_height="@dimen/dimen_90dp"
               android:src="@mipmap/qzone" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/dimen_30dp"
               android:text="@string/share_qzone"
               android:textColor="@color/black"
               android:textSize="@dimen/txtsize_36sp" />
       </LinearLayout>
       </com.balysv.materialripple.MaterialRippleLayout>

       <!--新浪微博-->
       <TextView
           android:background="@color/hui2"
           android:layout_width="match_parent"
           android:layout_height="1dp" />
       <com.balysv.materialripple.MaterialRippleLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_135dp"
           app:mrl_rippleColor="@color/black"
           app:mrl_rippleHover="true"
           app:mrl_rippleOverlay="true"
           materialdesign:rippleBorderRadius="50">
       <LinearLayout
           android:id="@+id/sina"
           android:paddingLeft="@dimen/dimen_30dp"
           android:orientation="horizontal"
           android:gravity="center_vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <ImageView
               android:src="@mipmap/sina"
               android:layout_width="@dimen/dimen_90dp"
               android:layout_height="@dimen/dimen_90dp" />
           <TextView
               android:layout_marginLeft="@dimen/dimen_30dp"
               android:text="@string/share_sinaweibo"
               android:textSize="@dimen/txtsize_36sp"
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
       </LinearLayout>
       </com.balysv.materialripple.MaterialRippleLayout>
   </LinearLayout>



</RelativeLayout>